# singal-flow

./: .dockerignore  .env.example  .env.template  .gitignore  AI_LEARNING_README.md  API_DOCUMENTATION.md  AUDIT_IMPLEMENTATION_STATUS.md  DASHBOARD_README.md  DEPLOYMENT.md  DEPLOYMENT_ANALYSIS_REPORT.md  Dockerfile  Dockerfile.legacy  ENHANCED_CONFIG_GUIDE.md  FAST_UI_README.md  IMPLEMENTATION_STATUS.md  INTEGRATION_COMPLETE.md  LICENSE  NEW_TRADING_FEATURES.md  NOTIFICATION_SETUP.md  OPTIMIZATION_SUMMARY.md  PACKAGE_ANALYSIS.md  PRODUCTION_CHECKLIST.md  PRODUCTION_DEPLOYMENT_STATUS.md  PRODUCTION_ERRORS_FIXED.md  PRODUCTION_READINESS_REPORT.md  PRODUCTION_RECOMMENDATIONS.md  PRODUCTION_STATUS.md  Procfile  RAILWAY_BUILD_OPTIMIZATION.md  RAILWAY_DEPLOYMENT.md  RAILWAY_FIX_SUMMARY.md  README.md  README_ENHANCED.md  README_Enhanced_System.md  REAL_DASHBOARD_COMPLETE.md  STREAMLIT_DEPLOYMENT.md  SignalFLowReadMe.md  Signalflow.md  activate_enhanced_features.py  complete_action_plan.py  (+112 more)
.devcontainer/: devcontainer.json
.streamlit/: config.toml
agents/: sentiment_agent.py  summary_agent.py  trade_recommender_agent.py
archive/: Procfile.dashboard  railway.env.template  requirements_ai_learning.txt  verify_workspace.py
backend/: Dockerfile  README.md  comprehensive_test.py  debug_websocket.py  main.py  main_backup.py  minimal_test.py  railway.json  railway_api.py  railway_start.py  railway_test.py  requirements-production.txt  requirements.txt  simple_ws_test.py  test_deployment_readiness.py  test_minimal_ws.py  test_railway.py  test_websocket.py  test_ws_server.py
data/: active_trades.json  daily_summaries.json  market_regime_cache.json  model_weights.json  position_history.json  strategy_stats.json  trade_log.json  watchlist.json  (+1 more)
(+265 files in other folders)
