[project]
name = "helios"
version = "0.1.0"
description = "Autonomous AI quant trading system (successor to Signal Flow)"
authors = [{ name = "Isaac Mineo" }]
requires-python = ">=3.12,<3.13"
readme = "README.md"
license = { text = "MIT" }

dependencies = [
    # core
    "pydantic>=2.7",
    "loguru>=0.7",
    "anyio>=4.4",
    "httpx>=0.27",
    "orjson>=3.10",
    # data + analytics
    "polars>=1.0",
    "duckdb>=1.0",
    "pyarrow>=16",
    "numpy>=1.26",
    "pandas>=2.2",
    "scipy>=1.13",
    # ml
    "scikit-learn>=1.5",
    "xgboost>=2.0",
    "optuna>=3.6",
    "mlflow>=2.14",
    # api
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "websockets>=12",
    # broker / venue adapters
    "ccxt>=4.3",
    "alpaca-py>=0.30",
    # llm (off the hot path)
    "anthropic>=0.34",
    # storage
    "pymongo>=4.7",
    "redis>=5.0",
    # ops
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "hypothesis>=6.108",
    "ruff>=0.5",
    "mypy>=1.10",
]
rl = [
    "torch>=2.3",
    "stable-baselines3>=2.3",
    "gymnasium>=0.29",
]
nlp = [
    "transformers>=4.43",
    "sentence-transformers>=3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["helios"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "W", "UP", "N", "SIM", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
